--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -43,9 +43,14 @@ spec:
           # APM
           - name: DD_APM_ENABLED
             value: "true"
+          - name: DD_APM_NON_LOCAL_TRAFFIC
+            value: "true"
           # For Trace Search
           - name: DD_APM_ANALYZED_SPANS
             value: "my-flask-app|flask.request=1,postgres_service|postgres.query=1"
+          # For dogstatsd
+          - name: DD_DOGSTATSD_NON_LOCAL_TRAFFIC
+            value: "true"
         resources:
           requests:
             memory: "256Mi"
