Enable dogstatsd for custom metrics

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -15,6 +15,7 @@ spec:
         name: datadog-agent
         ports:
           - containerPort: 8125
+            hostPort: 8125
             name: dogstatsdport
             protocol: UDP
           - containerPort: 8126
