Upgrade ddtrace adding log trace correlation

--- a/flask_deploy.yaml
+++ b/flask_deploy.yaml
@@ -32,6 +32,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
+        - name: DD_LOGS_INJECTION
+          value: 'true'
       volumes:
         - hostPath:
             path: /var/log/flask
