--- a/flask-app/Dockerfile
+++ b/flask-app/Dockerfile
@@ -1,7 +1,8 @@
-FROM ubuntu:latest
-RUN apt-get update -y && apt-get install -y python-pip python-dev
-COPY . /app
+FROM python:3-alpine
 WORKDIR /app
+COPY . /app
+RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
 RUN pip install -r requirements.txt
-ENTRYPOINT ["python"]
-CMD ["app.py"]
+
+EXPOSE 5005
+ENTRYPOINT ["python3", "app.py"]
